--- a/notebooks/python_challenges.ipynb
+++ b/notebooks/python_challenges.ipynb
@@ -1844,49 +1844,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Solution(object):\n",
-    "    def sieve(self, limit):\n",
-    "        is_prime = [True] * (limit + 1)\n",
-    "        is_prime[0] = is_prime[1] = False\n",
-    "\n",
-    "        for num in range(2, int(limit**0.5) + 1):\n",
-    "            if is_prime[num]:\n",
-    "                for multiple in range(num * num, limit + 1, num):\n",
-    "                    is_prime[multiple] = False\n",
-    "\n",
-    "        return is_prime\n",
-    "\n",
-    "    def closestPrimes(self, left, right):\n",
-    "        \"\"\"\n",
-    "        :type left: int\n",
-    "        :type right: int\n",
-    "        :rtype: List[int]\n",
-    "        \"\"\"\n",
-    "        is_prime = self.sieve(right)\n",
-    "        \n",
-    "        primes = [num for num in range(left, right + 1) if is_prime[num]]\n",
-    "        \n",
-    "        if len(primes) < 2:\n",
-    "            return [-1, -1]\n",
-    "        \n",
-    "        min_diff = float('inf')\n",
-    "        ans = [-1, -1]\n",
-    "\n",
-    "        for i in range(len(primes) - 1):\n",
-    "            diff = primes[i + 1] - primes[i]\n",
-    "            if diff < min_diff:\n",
-    "                min_diff = diff\n",
-    "                ans = [primes[i], primes[i + 1]]\n",
-    "\n",
-    "        return ans\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -1902,6 +1859,13 @@
     "# Example usage\n",
     "sol = Solution()\n",
     "print(sol.closestPrimes(10, 50))  # Example output: [11, 13]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Check if a number is a prime number or not**"
    ]
   },
   {
@@ -1936,6 +1900,418 @@
     "    print(f\"{num} is a prime number\")\n",
     "else:\n",
     "    print(f\"{num} is not a prime number\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "employee = pd.DataFrame({\n",
+    "    'name':['ashE','DANI','MiCKY'],\n",
+    "    'id':[1,2,3]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fixNames(employee: pd.DataFrame) -> pd.DataFrame:\n",
+    "    employee['name'] = employee['name'].str.capitalize()\n",
+    "    employee.sort_values(by='id', inplace=True)\n",
+    "    return employee"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ashe</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Dani</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Micky</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    name  id\n",
+       "0   Ashe   1\n",
+       "1   Dani   2\n",
+       "2  Micky   3"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fixNames(employee=employee)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**LeetCode-Style Challenge**: *\"Number of Rich Customers\"*\n",
+    "*- Difficulty: Medium*\n",
+    "- **Problem Statement:**\n",
+    "*You are given a Pandas DataFrame ```Accounts``` containing customer bank account information.*\n",
+    "*Write a function to count the number of rich customers, where a rich customer is defined as having a balance greater than 10,000.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Accounts_data = pd.DataFrame({\n",
+    "    \"account_id\": [1, 2, 3, 4, 5],\n",
+    "    \"name\": [\"Alice\", \"Bob\", \"Charlie\", \"David\", \"Eve\"],\n",
+    "    \"balance\": [5000, 12000, 30000, 7000, 15000]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution():\n",
+    "    def findRichCustomer(self, Accounts_data:pd.DataFrame) -> pd.DataFrame:\n",
+    "        df = Accounts_data.loc[Accounts_data['balance']>10000,['name','balance']]\n",
+    "        number_rich = df.value_counts().sum()\n",
+    "        return int(number_rich)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Solution().findRichCustomer(Accounts_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**LeetCode-Style Advanced Challenge**: *\"Immediate Food Delivery I\"*\n",
+    "\n",
+    "- **Problem Statement:**\n",
+    "- *You are given a Pandas DataFrame Delivery containing food delivery records. Each order is either immediately delivered (if the order time matches the delivery time) or not.*\n",
+    "\n",
+    "- Write a function to calculate the percentage of immediate deliveries, rounded to 2 decimal places.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delivery = pd.DataFrame({\n",
+    "    \"order_id\": [1, 2, 3, 4, 5, 6],\n",
+    "    \"customer_id\": [101, 102, 103, 104, 105, 106],\n",
+    "    \"order_date\": pd.to_datetime([\"2024-03-01\", \"2024-03-02\", \"2024-03-02\", \"2024-03-03\", \"2024-03-04\", \"2024-03-04\"]),\n",
+    "    \"delivery_date\": pd.to_datetime([\"2024-03-01\", \"2024-03-03\", \"2024-03-02\", \"2024-03-03\", \"2024-03-05\", \"2024-03-04\"])\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>order_date</th>\n",
+       "      <th>delivery_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>101</td>\n",
+       "      <td>2024-03-01</td>\n",
+       "      <td>2024-03-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>102</td>\n",
+       "      <td>2024-03-02</td>\n",
+       "      <td>2024-03-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>103</td>\n",
+       "      <td>2024-03-02</td>\n",
+       "      <td>2024-03-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>104</td>\n",
+       "      <td>2024-03-03</td>\n",
+       "      <td>2024-03-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>105</td>\n",
+       "      <td>2024-03-04</td>\n",
+       "      <td>2024-03-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>106</td>\n",
+       "      <td>2024-03-04</td>\n",
+       "      <td>2024-03-04</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   order_id  customer_id order_date delivery_date\n",
+       "0         1          101 2024-03-01    2024-03-01\n",
+       "1         2          102 2024-03-02    2024-03-03\n",
+       "2         3          103 2024-03-02    2024-03-02\n",
+       "3         4          104 2024-03-03    2024-03-03\n",
+       "4         5          105 2024-03-04    2024-03-05\n",
+       "5         6          106 2024-03-04    2024-03-04"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "delivery.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>order_date</th>\n",
+       "      <th>delivery_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>101</td>\n",
+       "      <td>2024-03-01</td>\n",
+       "      <td>2024-03-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>103</td>\n",
+       "      <td>2024-03-02</td>\n",
+       "      <td>2024-03-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>104</td>\n",
+       "      <td>2024-03-03</td>\n",
+       "      <td>2024-03-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>106</td>\n",
+       "      <td>2024-03-04</td>\n",
+       "      <td>2024-03-04</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   order_id  customer_id order_date delivery_date\n",
+       "0         1          101 2024-03-01    2024-03-01\n",
+       "2         3          103 2024-03-02    2024-03-02\n",
+       "3         4          104 2024-03-03    2024-03-03\n",
+       "5         6          106 2024-03-04    2024-03-04"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " imm_del = delivery[delivery['delivery_date']==delivery['order_date']]\n",
+    "imm_del"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "66.66666666666666"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(4/6)*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ake():\n",
+    "    def immidiateDelivery(self, delivery:pd.DataFrame) -> float:\n",
+    "        if delivery.empty:\n",
+    "            return 0.00\n",
+    "        imm_del = delivery[delivery['delivery_date']==delivery['order_date']]\n",
+    "        tot_count = len(delivery)\n",
+    "        imm_del_count = len(imm_del)\n",
+    "        imm_del_percent = (imm_del_count/tot_count)*100\n",
+    "        return round(imm_del_percent,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "66.67"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ake().immidiateDelivery(delivery=delivery)"
    ]
   },
   {
