--- a/notebooks/python_challenges.ipynb
+++ b/notebooks/python_challenges.ipynb
@@ -2656,6 +2656,162 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "able: Teacher\n",
+    "\n",
+    "+-------------+------+\n",
+    "| Column Name | Type |\n",
+    "+-------------+------+\n",
+    "| teacher_id  | int  |\n",
+    "| subject_id  | int  |\n",
+    "| dept_id     | int  |\n",
+    "+-------------+------+\n",
+    "(subject_id, dept_id) is the primary key (combinations of columns with unique values) of this table.\n",
+    "Each row in this table indicates that the teacher with teacher_id teaches the subject subject_id in the department dept_id.\n",
+    " \n",
+    "\n",
+    "Write a solution to calculate the number of unique subjects each teacher teaches in the university.\n",
+    "\n",
+    "Return the result table in any order.\n",
+    "\n",
+    "The result format is shown in the following example.\n",
+    "\n",
+    " \n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: \n",
+    "Teacher table:\n",
+    "+------------+------------+---------+\n",
+    "| teacher_id | subject_id | dept_id |\n",
+    "+------------+------------+---------+\n",
+    "| 1          | 2          | 3       |\n",
+    "| 1          | 2          | 4       |\n",
+    "| 1          | 3          | 3       |\n",
+    "| 2          | 1          | 1       |\n",
+    "| 2          | 2          | 1       |\n",
+    "| 2          | 3          | 1       |\n",
+    "| 2          | 4          | 1       |\n",
+    "+------------+------------+---------+\n",
+    "Output:  \n",
+    "+------------+-----+\n",
+    "| teacher_id | cnt |\n",
+    "+------------+-----+\n",
+    "| 1          | 2   |\n",
+    "| 2          | 4   |\n",
+    "+------------+-----+\n",
+    "Explanation: \n",
+    "Teacher 1:\n",
+    "  - They teach subject 2 in departments 3 and 4.\n",
+    "  - They teach subject 3 in department 3.\n",
+    "Teacher 2:\n",
+    "  - They teach subject 1 in department 1.\n",
+    "  - They teach subject 2 in department 1.\n",
+    "  - They teach subject 3 in department 1.\n",
+    "  - They teach subject 4 in department 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   teacher_id  subject_id  dept_id\n",
+      "0           1           2        3\n",
+      "1           1           2        4\n",
+      "2           1           3        3\n",
+      "3           2           1        1\n",
+      "4           2           2        1\n",
+      "5           2           3        1\n",
+      "6           2           4        1\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Creating the Teacher DataFrame\n",
+    "data = {\n",
+    "    \"teacher_id\": [1, 1, 1, 2, 2, 2, 2],\n",
+    "    \"subject_id\": [2, 2, 3, 1, 2, 3, 4],\n",
+    "    \"dept_id\": [3, 4, 3, 1, 1, 1, 1]\n",
+    "}\n",
+    "\n",
+    "teacher = pd.DataFrame(data)\n",
+    "# Display the DataFrame\n",
+    "print(teacher)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>teacher_id</th>\n",
+       "      <th>cnt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   teacher_id  cnt\n",
+       "0           1    2\n",
+       "1           2    4"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "def count_unique_subjects(teacher: pd.DataFrame) -> pd.DataFrame:\n",
+    "    df = teacher.groupby('teacher_id',as_index=False)['subject_id'].nunique()\n",
+    "    df.rename(columns={'subject_id':'cnt'},inplace=True)\n",
+    "    return df"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
